// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elipsis disables if shorter than limit 1`] = `
<Memo(WithStyles(Tooltip))
  disableHoverListener={true}
  interactive={false}
  placement="bottom-start"
  title="this is a sample text"
>
  <WithStyles(Typography)
    className="content-mock"
    variant="caption"
  >
    this is a sample text
  </WithStyles(Typography)>
</Memo(WithStyles(Tooltip))>
`;

exports[`Elipsis renders with custom size 1`] = `
<Memo(WithStyles(Tooltip))
  disableHoverListener={false}
  interactive={false}
  placement="bottom-start"
  title="this is a sample text"
>
  <WithStyles(Typography)
    className="content-mock"
    variant="caption"
  >
    this ...
  </WithStyles(Typography)>
</Memo(WithStyles(Tooltip))>
`;

exports[`Elipsis renders with placement bottom 1`] = `
<Memo(WithStyles(Tooltip))
  disableHoverListener={false}
  interactive={false}
  placement="bottom"
  title="this is a sample text"
>
  <WithStyles(Typography)
    className="content-mock"
    variant="caption"
  >
    this ...
  </WithStyles(Typography)>
</Memo(WithStyles(Tooltip))>
`;

exports[`Elipsis renders with placement bottom-end 1`] = `
<Memo(WithStyles(Tooltip))
  disableHoverListener={false}
  interactive={false}
  placement="bottom-end"
  title="this is a sample text"
>
  <WithStyles(Typography)
    className="content-mock"
    variant="caption"
  >
    this ...
  </WithStyles(Typography)>
</Memo(WithStyles(Tooltip))>
`;

exports[`Elipsis renders with placement bottom-start 1`] = `
<Memo(WithStyles(Tooltip))
  disableHoverListener={false}
  interactive={false}
  placement="bottom-start"
  title="this is a sample text"
>
  <WithStyles(Typography)
    className="content-mock"
    variant="caption"
  >
    this ...
  </WithStyles(Typography)>
</Memo(WithStyles(Tooltip))>
`;
